# invoiceFlow-AI

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  app.py  docker-compose.yml  main.py  pyproject.toml
src/: config.py
src/models/: models.py
src/services/ocr/: factory.py  interface.py  main.py
src/services/ocr/providers/: ocr_utils.py  paddleocr.py  pdfplumber.py  tesseract.py
src/services/parser/: __init__.py  factory.py  interface.py  main.py  parser_registry.py
src/services/parser/providers/: heuristic_parser.py  llm_parser.py
src/services/parser/providers/heuristic/: heuristic_router.py  heuristic_table.py  heuristic_text.py
src/services/parser/providers/llm/: llm_parser.py  retry_llm_utils.py
src/services/validation/: interface.py  numeric_validation.py  validation_result.py
src/utils/: logging_config.py
